# modernbert-ner-ablation

./: .gitignore  README.md  pyproject.toml  train_20260321_095423.txt  train_20260321_095658.txt
documents/: CoNLL-2003_Dataset_Verification.md  conll2003_data_verification.txt  tokenization_note.md
notebooks/: -download_and_validate_data.ipynb  00bert_baseline.ipynb  01modernbert_baseline.ipynb  02modernbert_doccontext.ipynb  03modernbert_crf.ipynb  04modernbert_combined.ipynb  download_datasets.ipynb
references/: 1-ref_0217.bib  refs.bib
results/: bert_ner_baseline_3seed.txt  bert_ner_config_3e5.csv  bert_ner_config_5e5.csv  bert_ner_results.csv  modernbert_crf_ner_config_0.csv  modernbert_doc_crf_ner_config_doc_0.json  modernbert_doc_crf_ner_config_doc_5e5_bs4.csv  modernbert_doc_ner_config_doc_0.csv  modernbert_doc_ner_config_doc_5e5_bs2.csv  modernbert_hp_sweep_3.txt  modernbert_hp_sweep_summary.csv  modernbert_hp_sweet_2.txt  modernbert_ner_config_C.csv  modernbert_ner_config_D2.csv  modernbert_ner_config_E.csv  modernbert_ner_config_F.csv  modernbert_ner_config_G.csv  modernbert_ner_config_I.csv  modernbert_ner_config_J.csv  modernbert_ner_config_M.csv  modernbert_ner_results.csv  ner_bert.csv  ner_bert.json  ner_bert_doc.csv  ner_bert_doc.json  ner_bert_doc_ref.json  ner_bert_ref.csv  ner_bert_ref.json  ner_bert_ref_v2.json  ner_mbert.json  ner_mbert_crf.csv  ner_mbert_crf.json  ner_mbert_doc.csv  ner_mbert_doc.json  ner_mbert_doc_4e5_bs2.json  ner_mbert_doc_crf.csv  ner_mbert_doc_crf.json  ner_mbert_doc_crf_v2.json  ner_mbert_sent_best_B_bs32_lr4e5_es12.csv  (+12 more)
(+99 files in other folders)
